Mon Feb  3 23:29:02 1997  Tom Yu  <tlyu@mit.edu>

	* pre.in: Add GEN_LIB support (-lgen); also fix --with-krb4 stuff
	(such as KRB4_LIB).

Fri Jan 31 20:41:34 1997  Tom Yu  <tlyu@mit.edu>

	* pre.in: Fix up GEN_LIB to DTRT

	* pre.in: Add KDB5_LIB, and also fix typo (-lutil -> -lkrb5util)

Mon Jan 27 17:13:15 1997  Tom Yu  <tlyu@mit.edu>

	* pre.in: Add variable to support new program building procedure.

Thu Jan 16 18:58:16 1997  Tom Yu  <tlyu@mit.edu>

	* post.in (Makefiles-prerecurse): Change to use double-colon
	rule.

	* pre.in (recursion rules): Change *-prerecurse and *-postrecurse
	targets to be double-colon rules, to allow for multiple targets to
	be evaluated in sequence.

Fri Jan  3 23:16:31 1997  Tom Yu  <tlyu@mit.edu>

	* lib.in: Change semantics of SHLIB_EXPFLAGS somewhat to sync with
	new aclocal.m4 changes.

Thu Jan  2 18:19:20 1997  Tom Yu  <tlyu@mit.edu>

	* lib.in: Add facilities for explicit dependencies in libraries.

Mon Dec 30 12:54:23 1996  Ezra Peisach  <epeisach@mit.edu>

	* lib.in: Remove object of symlink before creating.

Sun Dec 29 22:40:14 1996  Tom Yu  <tlyu@mit.edu>

	* pre.in: Add missing Makefiles rules.

Sun Dec 29 21:24:01 1996  Tom Yu  <tlyu@mit.edu>

	* lib.in: fix typo in profiled lib build

	* libobj.in: random bugfixes

Sat Dec 28 21:46:33 1996  Tom Yu  <tlyu@mit.edu>

	* libobj.in: Cause Makefile to depend on config/libobj.in
	* lib.in: Cause Makefile to depend on config/lib.in

Fri Dec 27 17:06:41 1996  Tom Yu  <tlyu@mit.edu>

	* lib.in: Fix up loops to deal with an OBJS.ST that is in the
	current directory; add a comment documenting possible make
	incompatibility if OBJS.ST is specified as ./OBJS.ST.

	* pre.in:
	* post.in: Fix up recursion to be somewhat saner.
	* lib.in:
	* libobj.in: Add these frags for new library build system.

Tue Dec 24 16:43:45 1996  Tom Yu  <tlyu@mit.edu>

	* config.guess:
	* config.sub: Update from autoconf-2.12.

Mon Nov 11 20:53:01 1996  Tom Yu  <tlyu@mit.edu>
